# claude_zoom

./: .env.example  .gitignore  README.md  package-lock.json  pyproject.toml  run.sh
claude_zoom/: __init__.py  agents.py  chat.py  cli.py  coordinator.py  narrator.py  pr.py  qa.py  server.py  snippets.py  state.py  tui.py  voice.py
electron/: package-lock.json  package.json  tsconfig.json  tsconfig.main.json
electron/src/main/: agent-manager.ts  chat-engine.ts  claude-session.ts  context-tree.ts  conversation-manager.ts  coordinator.ts  index.ts  modal-native.ts  narrator.ts  ollama-session.ts  preload.ts  product-manager.ts  python-bridge.ts  remote-session.ts  state.ts  tech-lead.ts  voice.ts
electron/src/renderer/: App.tsx  index.html  main.tsx
electron/src/renderer/components/: ActivityTicker.tsx  AgentCard.tsx  AvatarPanel.tsx  ConversationSwitcher.tsx  GroupedTranscript.tsx  PMDetailView.tsx  PMOnboardingView.tsx  Sidebar.tsx  StatusBar.tsx  TranscriptEntry.tsx  TranscriptView.tsx  WorkLogView.tsx
electron/src/renderer/hooks/: useAppState.ts  useIPC.ts  useWebSocket.ts
electron/src/renderer/styles/: components.css  theme.css
electron/src/renderer/types/: messages.ts
